--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,46 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:background="@drawable/library_home"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/library_home">
 
-    <!-- İçerik -->
+    <!-- Ana içerik -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Toolbar -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="55dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginTop="30dp"
             android:title="BookWise"
-            app:titleTextColor="@android:color/white" />
+            app:titleTextColor="@android:color/white"
+            android:background="@android:color/transparent" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <!-- Kitap Listesi -->
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
+            android:layout_below="@+id/toolbar"
+            android:layout_margin="8dp"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/searchbox_background"
+            android:queryHint="Kitap, Yazar veya Konu ara..."
+            android:padding="2dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewBooks"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/searchView"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="150dp"
-            android:text="Ana Sayfa"
-            android:textColor="#FBFBFB"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="-2dp"
+            android:layout_marginBottom="80dp" />
     </RelativeLayout>
 
-    <!-- Menüyü Tanımla -->
+    <!-- Sol Menü -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/nav_header"
         android:background="@android:color/white"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
