--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -10,217 +10,126 @@
 
     <EditText
         android:id="@+id/eTname"
-        android:layout_width="wrap_content"
+        android:layout_width="339dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="59dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="12dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="text"
-        android:text=""
+        android:hint="Ad"
         android:textColor="#000000"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTsurname"
-        android:layout_width="wrap_content"
+        android:layout_width="341dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eTname"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="text"
+        android:hint="Soyad"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:text="" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTusername"
-        android:layout_width="wrap_content"
+        android:layout_width="339dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eTsurname"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="17dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="text"
+        android:hint="Kullanıcı Adı"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:text="" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTmail"
-        android:background="@drawable/edittext_background"
-        android:layout_width="wrap_content"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="262dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="text"
+        android:hint="E-Mail"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:text="" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTpassword"
-        android:background="@drawable/edittext_background"
-        android:layout_width="wrap_content"
+        android:layout_width="337dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="329dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:inputType="textPassword"
+        android:hint="Parola"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:text="" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTbirthdate"
-        android:layout_width="208dp"
+        android:layout_width="334dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eTpassword"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="21dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="294dp"
         android:background="@drawable/edittext_background"
         android:drawableEnd="@drawable/ic_calendar"
         android:drawablePadding="12dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Birth Date"
+        android:hint="Doğum Tarihi"
         android:inputType="none"
         android:textColor="#000000"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eTaddress"
-        android:layout_width="wrap_content"
+        android:layout_width="334dp"
         android:layout_height="120dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginTop="455dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
+        android:hint="Adres"
         android:inputType="text"
-        android:text=""
         android:textColor="#000000"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="77dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Name" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="147dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Surname" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="212dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Username *" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="278dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Email *" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="346dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Password *" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="308dp"
-        android:text="Birth Date"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="239dp"
-        android:textColor="#FBFBFB"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Address" />
-
     <Button
         android:id="@+id/btnregister"
-        android:layout_width="210dp"
+        android:layout_width="332dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="78dp"
-        android:backgroundTint="#FF9800"
+        android:backgroundTint="#0095FF"
         android:elevation="6dp"
-        android:text="Register"
+        android:text="KAYDOL"
         android:textColor="#FBFBFB"
         android:textStyle="bold" />
 
