--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="purple_700">#3700B3</color>
     <color name="purple_500">#6200EE</color>
     <color name="teal_200">#03DAC5</color>
+    <color name="tab_selected_text">#0095FF</color>
 </resources>
