forget password button adn other conf added.

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/forgetpassword"
+        android:id="@+id/btnforgetpassword"
         android:layout_width="348dp"
         android:layout_height="63dp"
         android:layout_alignParentTop="true"
