--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="purple_700">#3700B3</color>
     <color name="purple_500">#6200EE</color>
     <color name="teal_200">#03DAC5</color>
+    <color name="red_500">#FF9800</color>
+    <color name="teal_700">#2196F3</color>
     <color name="tab_selected_text">#0095FF</color>
 </resources>
