--- a/app/src/main/res/layout/fragment_favori_kitaplar.xml
+++ b/app/src/main/res/layout/fragment_favori_kitaplar.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:text="Hiç favori kitabınız yok."
         android:gravity="center"
-        android:textColor="#888"
-        android:textSize="16sp"
+        android:textColor="#FF9800"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:visibility="gone"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="64dp"/>
 
 </FrameLayout>
