--- a/app/src/main/res/layout/item_favorite_book.xml
+++ b/app/src/main/res/layout/item_favorite_book.xml
@@ -76,6 +76,7 @@
             android:text="Ödünç Al"
             android:backgroundTint="#4CAF50"
             android:textColor="@android:color/white"
+            android:textSize="13dp"
             android:maxLines="1"
             android:ellipsize="end"/>
 
@@ -84,10 +85,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.3"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="5dp"
             android:text="Favorilerden Kaldır"
             android:backgroundTint="#F44336"
             android:textColor="@android:color/white"
+            android:textSize="13dp"
             android:maxLines="1"
             android:ellipsize="end"/>
     </LinearLayout>
