--- a/app/src/main/res/layout/edituser.xml
+++ b/app/src/main/res/layout/edituser.xml
@@ -1,10 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/editUserRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edituser">
+    android:padding="16dp"
+    android:orientation="vertical"
+    android:background="@drawable/library_home">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_rounded_container"
+        android:text="Kullanıcı Listesi"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="45dp"
+        android:paddingBottom="12dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerUsers"
+        android:background="@drawable/bg_rounded_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="104dp"/>
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="-90dp"
+        android:layout_marginBottom="1dp"
+        android:backgroundTint="#0095FF"
+        android:text="ANA MENU"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
+</LinearLayout>
